application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: learn
  name: trade-app
  labels:
    app: trade-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trade-app
  template:
    metadata:
      labels:
        app: trade-app
    spec:
      containers:
      - name: trade-app
        image: niranjan1016/trade:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
        readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
        ports:
        - containerPort: 8080
