application/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: learn
  name: trade-app-blue
  labels:
    app: trade-app
    track: stable
    version: 1.0.1
spec:
  replicas: 4
  strategy:
   type: RollingUpdate
   rollingUpdate:
    maxSurge: 1
    maxUnavailable: 25%
  selector:
    matchLabels:
      app: trade-app
  template:
    metadata:
      labels:
        app: trade-app
    spec:
      containers:
      - name: trade-app-blue
        image: niranjan1016/trade:1.0.0
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
            httpGet:
              path: /trade/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
        readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: trade-service
  namespace: learn
  labels:
    app: trade-app
spec:
  type: NodePort
  selector:
    app: trade-app
  ports:
  - port: 8080
